# QuasiZenithNadelliteSystem

./: LICENSE  QZNS_D9C.txt  QZNS_F9P.txt  README.md  driver.vrdrivermanifest
Nadellite/: App.config  Form1.Designer.cs  Form1.cs  Form1.resx  Nadellite.csproj  Nadellite.sln  Program.cs
Nadellite/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs  Settings.settings
NadelliteDriver/: .gitignore  CMakeLists.txt
NadelliteDriver/src/: DriverProvider.cpp  DriverProvider.h  UdpPoseReceiver.cpp  UdpPoseReceiver.h  VirtualTrackerDevice.cpp  VirtualTrackerDevice.h  driver_main.cpp
